<resources>
    <string name="app_name">Aji</string>
    <string name="login">Login</string>
    <string name="usernameTitle">Username</string>
    <string name="passwordTitle">Password</string>
    <string name="inputUsernameHint">Masukkan Username</string>
    <string name="inputPasswordHint">Masukkan Password</string>
    <string name="login_button_hint">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="summary_account">Ini rekap absensi kamu bulan ini</string>
    <string name="nipHint">123456789</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_analytics">Analytics</string>
    <string name="bottom_nav_absence">Absence</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_nav_settings">Settings</string>

    <string name="month_placeholder">Month</string>
    <string name="date_placeholder">__ November 2024</string>
    <string name="clock_placeholder">Clock</string>
    <string name="caption_attendance">Attendance</string>

    <string name="caption_checkOut">Check Out</string>
    <string name="caption_totalHours">Total Hours</string>
    <string name="greetings_placeholder">Greetings</string>
    <string name="username_placeholder">Username</string>

    <string name="attendance_info">Early</string>
    <string name="attendance_placeholder">Attendance</string>
    <string name="clock_attendance">08:00</string>

    <string name="checkout_placeholder">Checkout</string>
    <string name="checkout_info">On Time</string>
    <string name="clock_checkout">17:00</string>

    <string name="absent_placeholder">Absent</string>
    <string name="month_absent_info">November</string>
    <string name="days_absent">2</string>
    <string name="day_days_absent">Day/Days</string>
    <string name="total_attended_placeholder">Total Attended</string>
    <string name="month_total_attendance_info">November</string>
    <string name="days_total_attended">15</string>

    <string name="date_tableHeader">Date</string>
    <string name="attendance_tableHeader">Attendance</string>
    <string name="checkout_tableHeader">Checkout</string>
    <string name="total_hours_tableHeader">Total Hours</string>

    <string name="date_tableContent">6 November</string>
    <string name="attendance_tableContent">08:00</string>
    <string name="checkout_tableContent">17:00</string>
    <string name="total_hours_tableContent">08:00</string>

    <string name="nik">NIK</string>
    <string name="alamat">Alamat</string>
    <string name="save">Save</string>
    <string name="delete_pegawai">Delete Pegawai</string>

    <string name="settings">Pengaturan</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="logout">Keluar</string>
    <string name="english">Bahasa Inggris</string>
    <string name="indonesian">Bahasa Indonesia</string>
    <string name="back">Kembali</string>

    <string name="settings_fragment">SettingsFragment</string>
    <string name="logout_button_clicked">Tombol logout diklik</string>
    <string name="dark_mode_enabled">Mode gelap diaktifkan</string>
    <string name="dark_mode_disabled">Mode gelap dinonaktifkan</string>
    <string name="logged_out_message">Anda telah keluar</string>
    <string name="bottom_navbar">Bottom Navbar</string>
    <string name="email_username">username@gmail.com</string>
    <string name="save_attendance">Simpah Absen</string>
    <string name="preview_selfie">Preview Selfie</string>
    <string name="attendance_history">Riwayat Kehadiran</string>
    <string name="title_analytics_fragment">Analisis Absensi Untuk</string>
    <string name="branding">Bersama aji, Gaji aman terkendali</string>
    <string name="employee_list">Daftar Pegawai</string>
    <string name="camera_button_placeholder">Go to Camera</string>
    <string name="button_rotate_camera">Rotasi kamera</string>
    <string name="button_capture">Ambil swafoto</string>
    <string name="table_histori_kehadiran">Table Histori Kehadiran</string>
    <string name="scroll_analytics">Scroll analytics</string>
    <string name="fee">Insentif</string>
    <string name="late">Terlambat</string>
    <string name="potongan">Potongan</string>
    <string name="tidakHadir">Tidak Hadir</string>
    <string name="overtime">Lembur</string>
    <string name="accumulated_fee">Total Pembayaran Gaji</string>
    <string name="gallery_placeholder">Galeri</string>
</resources>