<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNIK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nik" />

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnSavePegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
