<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDetailNIK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDetailAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnDeletePegawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_pegawai" />
</androidx.constraintlayout.widget.ConstraintLayout>
