<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/tvGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/italiana_regular"
        android:text="@string/greetings_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/italiana_regular"
        android:text="@string/username_placeholder"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreetings"
        tools:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/date_placeholder"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAttendance"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate">

        <View
            android:id="@+id/iconCircle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_circle" />

        <View
            android:id="@+id/arrow"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/attendance_icon" />

        <TextView
            android:id="@+id/tvAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/attendance_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNotesAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/attendance_info"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvClockAttendance"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/clock_attendance"
            android:textSize="32sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCheckout"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate">

        <View
            android:id="@+id/iconCircle2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_circle" />

        <View
            android:id="@+id/arrowUp"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkout_icon" />

        <TextView
            android:id="@+id/tvCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/checkout_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNotesCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/checkout_info"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvClockCheckout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/clock_checkout"
            android:textSize="32sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAbsent"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAttendance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDaysAbsent"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/days_absent"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDays"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/day_days_absent"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@id/tvDaysAbsent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/iconCircle3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_circle" />

        <View
            android:id="@+id/arrowUp2"
            android:layout_width="24dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/absent_icon" />

        <TextView
            android:id="@+id/tvAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/absent_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMonthAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/month_absent_info"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTotalAttended"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCheckout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDaysTotalAttended"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/days_total_attended"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDays2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/day_days_absent"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@id/tvDaysTotalAttended"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/iconCircle4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_circle" />

        <View
            android:id="@+id/fileIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/total_attended_icon" />

        <TextView
            android:id="@+id/tvTotalAttended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/total_attended_placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMonthTotalAttended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/month_total_attendance_info"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAttendanceHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/attendance_history_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAbsent" />

    <TableLayout
        android:id="@+id/tlAttendanceHistory"
        android:layout_width="410dp"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAttendanceHistory">

        <TableRow
            android:id="@+id/trHeaderAttendanceHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="20dp"
                android:layout_column="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/date_tableHeader"
                android:textAlignment="center"
                android:textSize="13sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/attendance_tableHeader"
                android:textSize="13sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/checkout_tableHeader"
                android:textSize="13sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/total_hours_tableHeader"
                android:textSize="13sp" />
        </TableRow>

        <View
            android:id="@+id/Line"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/md_theme_primaryContainer"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent" />

        <TableRow
            android:id="@+id/trContentAttendanceHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:layout_column="1"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/date_tableContent"
                android:textSize="15sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/attendance_tableContent"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/checkout_tableContent"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="3dp"
                android:text="@string/total_hours_tableContent"
                android:textAlignment="center"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>